--- a/build.gradle
+++ b/build.gradle
@@ -144,6 +144,7 @@ subprojects { project ->
       prefix = "okhttp3.internal"
       suppress = true
     }
+    includes = ['Module.md']
     externalDocumentationLink {
       url = new URL("https://square.github.io/okio/2.x/okio/jvm/index.html")
       packageListUrl = new URL("https://square.github.io/okio/2.x/okio/jvm/package-list")
