Specify jdk 8 for dokka
Since the project targets java 8

--- a/build.gradle
+++ b/build.gradle
@@ -148,6 +148,7 @@ subprojects { project ->
       packageListUrl = new URL("https://square.github.io/okio/2.x/okio/jvm/package-list")
     }
   }
+  jdkVersion = 8
 }
 
 tasks.wrapper {
