Add Okio docs link for dokka linking
Now Okio types correctly link

--- a/build.gradle
+++ b/build.gradle
@@ -143,6 +143,10 @@ subprojects { project ->
       prefix = "okhttp3.internal"
       suppress = true
     }
+    externalDocumentationLink {
+      url = new URL("https://square.github.io/okio/2.x/okio/jvm/index.html")
+      packageListUrl = new URL("https://square.github.io/okio/2.x/okio/jvm/package-list")
+    }
   }
 }
 
