Only specify module if it exists
A bunch of samples don't have modules or readmes

--- a/build.gradle
+++ b/build.gradle
@@ -144,7 +144,9 @@ subprojects { project ->
       prefix = "okhttp3.internal"
       suppress = true
     }
-    includes = ['Module.md']
+    if (project.file('Module.md').exists()) {
+      includes = ['Module.md']
+    }
     externalDocumentationLink {
       url = new URL("https://square.github.io/okio/2.x/okio/jvm/index.html")
       packageListUrl = new URL("https://square.github.io/okio/2.x/okio/jvm/package-list")
