Update Japicmp excludes

--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -150,6 +150,17 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.Address#sslSocketFactory()',
       'okhttp3.Address#url()',
       'okhttp3.Address#socketFactory()',
+      'okhttp3.Dispatcher#cancelAll()',
+      'okhttp3.Dispatcher#executorService()',
+      'okhttp3.Dispatcher#getMaxRequests()',
+      'okhttp3.Dispatcher#getMaxRequestsPerHost()',
+      'okhttp3.Dispatcher#queuedCalls()',
+      'okhttp3.Dispatcher#queuedCallsCount()',
+      'okhttp3.Dispatcher#runningCalls()',
+      'okhttp3.Dispatcher#runningCallsCount()',
+      'okhttp3.Dispatcher#setIdleCallback(java.lang.Runnable)',
+      'okhttp3.Dispatcher#setMaxRequests(int)',
+      'okhttp3.Dispatcher#setMaxRequestsPerHost(int)',
       'okhttp3.FormBody#encodedName(int)',
       'okhttp3.FormBody#encodedValue(int)',
       'okhttp3.FormBody#name(int)',
