Specify jdk 8 for dokka (#4845)
* Specify jdk 8 for dokka

Since the project targets java 8

* Fix location

Not sure how this happened

--- a/build.gradle
+++ b/build.gradle
@@ -139,6 +139,7 @@ subprojects { project ->
   dokka {
     reportUndocumented = false 
     skipDeprecated = true
+    jdkVersion = 8
     packageOptions {
       prefix = "okhttp3.internal"
       suppress = true
