--- a/build.gradle
+++ b/build.gradle
@@ -103,24 +103,32 @@ subprojects { project ->
     signature 'org.codehaus.mojo.signature:java18:1.0@signature'
   }
 
+  def platform = System.getProperty("okhttp.platform", "platform")
+
   test {
     jvmArgs += "-Dlistener=okhttp3.testing.InstallUncaughtExceptionHandlerListener"
-    jvmArgs += "-Dokhttp.platform=platform"
+    jvmArgs += "-Dokhttp.platform=$platform"
 
     testLogging {
       exceptionFormat = 'full'
     }
   }
 
-  // Add alpn-boot on Java 8 so we can use HTTP/2 without a stable API.
-  def alpnBootVersion = alpnBootVersion()
-  if (alpnBootVersion != null) {
-    dependencies {
-      testCompile "org.mortbay.jetty.alpn:alpn-boot:$alpnBootVersion"
+  if (platform == "platform") {
+    // Add alpn-boot on Java 8 so we can use HTTP/2 without a stable API.
+    def alpnBootVersion = alpnBootVersion()
+    if (alpnBootVersion != null) {
+      dependencies {
+        testCompile "org.mortbay.jetty.alpn:alpn-boot:$alpnBootVersion"
+      }
+      def alpnBootJar = configurations.testCompile.find { it.name.startsWith("alpn-boot-") }
+      test {
+        jvmArgs += "-Xbootclasspath/p:${alpnBootJar}"
+      }
     }
-    def alpnBootJar = configurations.testCompile.find { it.name.startsWith("alpn-boot-") }
-    test {
-      jvmArgs += "-Xbootclasspath/p:${alpnBootJar}"
+  } else if (platform == "conscrypt") {
+    dependencies {
+      testRuntime "org.conscrypt:conscrypt-openjdk-uber:${versions.conscrypt}"
     }
   }
 
