Revert circleci config change

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -234,7 +234,7 @@ workflows:
       - testconscrypt:
           filters:
             branches:
-              ignore: master
+              only: master
   nightly:
     triggers:
       - schedule:
