Convert MultipartBody to Kotlin

--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -59,6 +59,17 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
   ]
   methodExcludes = [
       // Became 'final' in 4.0.0:
+      'okhttp3.Address#certificatePinner()',
+      'okhttp3.Address#connectionSpecs()',
+      'okhttp3.Address#dns()',
+      'okhttp3.Address#hostnameVerifier()',
+      'okhttp3.Address#protocols()',
+      'okhttp3.Address#proxy()',
+      'okhttp3.Address#proxyAuthenticator()',
+      'okhttp3.Address#proxySelector()',
+      'okhttp3.Address#socketFactory()',
+      'okhttp3.Address#sslSocketFactory()',
+      'okhttp3.Address#url()',
       'okhttp3.Cache#delete()',
       'okhttp3.Cache#directory()',
       'okhttp3.Cache#evictAll()',
@@ -93,15 +104,15 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.CacheControl$Builder#noStore()',
       'okhttp3.CacheControl$Builder#noTransform()',
       'okhttp3.CacheControl$Builder#onlyIfCached()',
-      'okhttp3.CertificatePinner#check(java.lang.String, java.util.List)',
       'okhttp3.CertificatePinner#check(java.lang.String, java.security.cert.Certificate\\[\\])',
+      'okhttp3.CertificatePinner#check(java.lang.String, java.util.List)',
       'okhttp3.CertificatePinner$Builder#add(java.lang.String, java.lang.String\\[\\])',
       'okhttp3.CertificatePinner$Builder#build()',
       'okhttp3.CertificatePinner$Pin#matches(java.lang.String)',
-      'okhttp3.Challenge#scheme()',
       'okhttp3.Challenge#authParams()',
-      'okhttp3.Challenge#realm()',
       'okhttp3.Challenge#charset()',
+      'okhttp3.Challenge#realm()',
+      'okhttp3.Challenge#scheme()',
       'okhttp3.Challenge#withCharset(java.nio.charset.Charset)',
       'okhttp3.CipherSuite#javaName()',
       'okhttp3.ConnectionPool#connectionCount()',
@@ -115,11 +126,11 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.ConnectionSpec$Builder#allEnabledCipherSuites()',
       'okhttp3.ConnectionSpec$Builder#allEnabledTlsVersions()',
       'okhttp3.ConnectionSpec$Builder#build()',
-      'okhttp3.ConnectionSpec$Builder#cipherSuites(okhttp3.CipherSuite\\[\\])',
       'okhttp3.ConnectionSpec$Builder#cipherSuites(java.lang.String\\[\\])',
+      'okhttp3.ConnectionSpec$Builder#cipherSuites(okhttp3.CipherSuite\\[\\])',
       'okhttp3.ConnectionSpec$Builder#supportsTlsExtensions(boolean)',
-      'okhttp3.ConnectionSpec$Builder#tlsVersions(okhttp3.TlsVersion\\[\\])',
       'okhttp3.ConnectionSpec$Builder#tlsVersions(java.lang.String\\[\\])',
+      'okhttp3.ConnectionSpec$Builder#tlsVersions(okhttp3.TlsVersion\\[\\])',
       'okhttp3.Cookie#domain()',
       'okhttp3.Cookie#expiresAt()',
       'okhttp3.Cookie#hostOnly()',
@@ -139,17 +150,6 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.Cookie$Builder#path(java.lang.String)',
       'okhttp3.Cookie$Builder#secure()',
       'okhttp3.Cookie$Builder#value(java.lang.String)',
-      'okhttp3.Address#certificatePinner()',
-      'okhttp3.Address#connectionSpecs()',
-      'okhttp3.Address#dns()',
-      'okhttp3.Address#hostnameVerifier()',
-      'okhttp3.Address#protocols()',
-      'okhttp3.Address#proxy()',
-      'okhttp3.Address#proxyAuthenticator()',
-      'okhttp3.Address#proxySelector()',
-      'okhttp3.Address#sslSocketFactory()',
-      'okhttp3.Address#url()',
-      'okhttp3.Address#socketFactory()',
       'okhttp3.Dispatcher#cancelAll()',
       'okhttp3.Dispatcher#executorService()',
       'okhttp3.Dispatcher#getMaxRequests()',
@@ -173,8 +173,8 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.Handshake#localCertificates()',
       'okhttp3.Handshake#localPrincipal()',
       'okhttp3.Handshake#peerCertificates()',
-      'okhttp3.Handshake#tlsVersion()',
       'okhttp3.Handshake#peerPrincipal()',
+      'okhttp3.Handshake#tlsVersion()',
       'okhttp3.Headers#byteCount()',
       'okhttp3.Headers#get(java.lang.String)',
       'okhttp3.Headers#getDate(java.lang.String)',
@@ -188,16 +188,16 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.Headers#values(java.lang.String)',
       'okhttp3.Headers$Builder#add(java.lang.String)',
       'okhttp3.Headers$Builder#add(java.lang.String, java.lang.String)',
-      'okhttp3.Headers$Builder#add(java.lang.String, java.util.Date)',
       'okhttp3.Headers$Builder#add(java.lang.String, java.time.Instant)',
+      'okhttp3.Headers$Builder#add(java.lang.String, java.util.Date)',
       'okhttp3.Headers$Builder#addAll(okhttp3.Headers)',
       'okhttp3.Headers$Builder#addUnsafeNonAscii(java.lang.String, java.lang.String)',
       'okhttp3.Headers$Builder#build()',
       'okhttp3.Headers$Builder#get(java.lang.String)',
       'okhttp3.Headers$Builder#removeAll(java.lang.String)',
-      'okhttp3.Headers$Builder#set(java.lang.String, java.util.Date)',
-      'okhttp3.Headers$Builder#set(java.lang.String, java.time.Instant)',
       'okhttp3.Headers$Builder#set(java.lang.String, java.lang.String)',
+      'okhttp3.Headers$Builder#set(java.lang.String, java.time.Instant)',
+      'okhttp3.Headers$Builder#set(java.lang.String, java.util.Date)',
       'okhttp3.HttpUrl#encodedFragment()',
       'okhttp3.HttpUrl#encodedPassword()',
       'okhttp3.HttpUrl#encodedPath()',
@@ -257,18 +257,32 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.MediaType#charset(java.nio.charset.Charset)',
       'okhttp3.MediaType#subtype()',
       'okhttp3.MediaType#type()',
+      'okhttp3.MultipartBody#boundary()',
+      'okhttp3.MultipartBody#part(int)',
+      'okhttp3.MultipartBody#parts()',
+      'okhttp3.MultipartBody#size()',
+      'okhttp3.MultipartBody#type()',
+      'okhttp3.MultipartBody$Builder#addFormDataPart(java.lang.String, java.lang.String)',
+      'okhttp3.MultipartBody$Builder#addFormDataPart(java.lang.String, java.lang.String, okhttp3.RequestBody)',
+      'okhttp3.MultipartBody$Builder#addPart(okhttp3.Headers, okhttp3.RequestBody)',
+      'okhttp3.MultipartBody$Builder#addPart(okhttp3.MultipartBody$Part)',
+      'okhttp3.MultipartBody$Builder#addPart(okhttp3.RequestBody)',
+      'okhttp3.MultipartBody$Builder#build()',
+      'okhttp3.MultipartBody$Builder#setType(okhttp3.MediaType)',
+      'okhttp3.MultipartBody$Part#body()',
+      'okhttp3.MultipartBody$Part#headers()',
       'okhttp3.OkHttpClient$Builder#addInterceptor(okhttp3.Interceptor)',
       'okhttp3.OkHttpClient$Builder#addNetworkInterceptor(okhttp3.Interceptor)',
       'okhttp3.OkHttpClient$Builder#authenticator(okhttp3.Authenticator)',
       'okhttp3.OkHttpClient$Builder#build()',
       'okhttp3.OkHttpClient$Builder#cache(okhttp3.Cache)',
-      'okhttp3.OkHttpClient$Builder#callTimeout(long, java.util.concurrent.TimeUnit)',
       'okhttp3.OkHttpClient$Builder#callTimeout(java.time.Duration)',
+      'okhttp3.OkHttpClient$Builder#callTimeout(long, java.util.concurrent.TimeUnit)',
       'okhttp3.OkHttpClient$Builder#certificatePinner(okhttp3.CertificatePinner)',
+      'okhttp3.OkHttpClient$Builder#connectTimeout(java.time.Duration)',
+      'okhttp3.OkHttpClient$Builder#connectTimeout(long, java.util.concurrent.TimeUnit)',
       'okhttp3.OkHttpClient$Builder#connectionPool(okhttp3.ConnectionPool)',
       'okhttp3.OkHttpClient$Builder#connectionSpecs(java.util.List)',
-      'okhttp3.OkHttpClient$Builder#connectTimeout(long, java.util.concurrent.TimeUnit)',
-      'okhttp3.OkHttpClient$Builder#connectTimeout(java.time.Duration)',
       'okhttp3.OkHttpClient$Builder#cookieJar(okhttp3.CookieJar)',
       'okhttp3.OkHttpClient$Builder#dispatcher(okhttp3.Dispatcher)',
       'okhttp3.OkHttpClient$Builder#dns(okhttp3.Dns)',
@@ -279,20 +293,20 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.OkHttpClient$Builder#hostnameVerifier(javax.net.ssl.HostnameVerifier)',
       'okhttp3.OkHttpClient$Builder#interceptors()',
       'okhttp3.OkHttpClient$Builder#networkInterceptors()',
-      'okhttp3.OkHttpClient$Builder#pingInterval(long, java.util.concurrent.TimeUnit)',
       'okhttp3.OkHttpClient$Builder#pingInterval(java.time.Duration)',
+      'okhttp3.OkHttpClient$Builder#pingInterval(long, java.util.concurrent.TimeUnit)',
       'okhttp3.OkHttpClient$Builder#protocols(java.util.List)',
       'okhttp3.OkHttpClient$Builder#proxy(java.net.Proxy)',
       'okhttp3.OkHttpClient$Builder#proxyAuthenticator(okhttp3.Authenticator)',
       'okhttp3.OkHttpClient$Builder#proxySelector(java.net.ProxySelector)',
-      'okhttp3.OkHttpClient$Builder#readTimeout(long, java.util.concurrent.TimeUnit)',
       'okhttp3.OkHttpClient$Builder#readTimeout(java.time.Duration)',
+      'okhttp3.OkHttpClient$Builder#readTimeout(long, java.util.concurrent.TimeUnit)',
       'okhttp3.OkHttpClient$Builder#retryOnConnectionFailure(boolean)',
       'okhttp3.OkHttpClient$Builder#socketFactory(javax.net.SocketFactory)',
       'okhttp3.OkHttpClient$Builder#sslSocketFactory(javax.net.ssl.SSLSocketFactory)',
       'okhttp3.OkHttpClient$Builder#sslSocketFactory(javax.net.ssl.SSLSocketFactory, javax.net.ssl.X509TrustManager)',
-      'okhttp3.OkHttpClient$Builder#writeTimeout(long, java.util.concurrent.TimeUnit)',
       'okhttp3.OkHttpClient$Builder#writeTimeout(java.time.Duration)',
+      'okhttp3.OkHttpClient$Builder#writeTimeout(long, java.util.concurrent.TimeUnit)',
       'okhttp3.RealCall#getResponseWithInterceptorChain()',
       'okhttp3.RealCall#redactedUrl()',
       'okhttp3.RealCall#toLoggableString()',
@@ -321,8 +335,8 @@ task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
       'okhttp3.Response#handshake()',
       'okhttp3.Response#header(java.lang.String)',
       'okhttp3.Response#header(java.lang.String, java.lang.String)',
-      'okhttp3.Response#headers(java.lang.String)',
       'okhttp3.Response#headers()',
+      'okhttp3.Response#headers(java.lang.String)',
       'okhttp3.Response#isRedirect()',
       'okhttp3.Response#isSuccessful()',
       'okhttp3.Response#message()',
