Error on missing fail in tests

--- a/build.gradle
+++ b/build.gradle
@@ -139,6 +139,7 @@ subprojects { project ->
   }
   tasks.withType(JavaCompile).configureEach {
     options.errorprone {
+      check("MissingFail", CheckSeverity.ERROR)
       check("MissingOverride", CheckSeverity.ERROR)
     }
   }
