--- a/okhttp-logging-interceptor/build.gradle
+++ b/okhttp-logging-interceptor/build.gradle
@@ -8,10 +8,10 @@ jar {
 
 dependencies {
   api project(':okhttp')
-  compileOnly deps.jsr305
+  compileOnly 'com.google.code.findbugs:jsr305'
 
-  testCompileOnly deps.jsr305
-  testImplementation deps.junit
+  testCompileOnly 'com.google.code.findbugs:jsr305'
+  testImplementation 'junit:junit'
   testImplementation project(':mockwebserver')
   testImplementation project(':okhttp-testing-support')
   testImplementation project(':okhttp-tls')
