--- a/samples/slack/build.gradle
+++ b/samples/slack/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
   implementation project(':mockwebserver')
-  implementation deps.moshi
+  implementation 'com.squareup.moshi:moshi'
 }
