--- a/build.gradle
+++ b/build.gradle
@@ -1,41 +1,11 @@
 import net.ltgt.gradle.errorprone.CheckSeverity
 
 buildscript {
-  ext.versions = [
-      'android': '4.1.1.4',
-      'animalSniffer': '1.17',
-      'assertj': '3.11.0',
-      'bouncycastle': '1.60',
-      'checkstyle': '8.15',
-      'conscrypt': '2.1.0',
-      'findbugs': '3.0.2',
-      'guava': '27.0.1-jre',
-      'java': '1.8',
-      'jnrUnixsocket': '0.22',
-      'jsoup': '1.11.3',
-      'junit': '4.12',
-      'kotlin': '1.3.20',
-      'moshi': '1.8.0',
-      'okio': '2.2.2',
-  ]
-
-  ext.deps = [
-      'animalSniffer': "org.codehaus.mojo:animal-sniffer-annotations:${versions.animalSniffer}",
-      'assertj': "org.assertj:assertj-core:${versions.assertj}",
-      'bouncycastle': "org.bouncycastle:bcprov-jdk15on:${versions.bouncycastle}",
-      'conscrypt': "org.conscrypt:conscrypt-openjdk-uber:${versions.conscrypt}",
-      'guava': "com.google.guava:guava:${versions.guava}",
-      'jnrUnixsocket': "com.github.jnr:jnr-unixsocket:${versions.jnrUnixsocket}",
-      'jsoup': "org.jsoup:jsoup:${versions.jsoup}",
-      'kotlinStdlib': "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}",
-      'okio': "com.squareup.okio:okio:${versions.okio}"
-  ]
-
   dependencies {
     // TODO(jwilson): configure maven-publish-plugin to limit which artifacts are published.
     classpath 'com.vanniktech:gradle-maven-publish-plugin:0.8.0'
     classpath 'net.ltgt.gradle:gradle-errorprone-plugin:0.7.1'
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.20"
     classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.9.18"
   }
 
@@ -83,7 +53,7 @@ subprojects { project ->
   afterEvaluate {
     checkstyle {
       configFile = rootProject.file('checkstyle.xml')
-      toolVersion "${versions.checkstyle}"
+      toolVersion "8.15"
       sourceSets = [project.sourceSets.main]
     }
   }
@@ -123,7 +93,7 @@ subprojects { project ->
     }
   } else if (platform == "conscrypt") {
     dependencies {
-      testRuntime "org.conscrypt:conscrypt-openjdk-uber:${versions.conscrypt}"
+      testRuntime "org.conscrypt:conscrypt-openjdk-uber"
     }
   }
 
