--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,15 @@
 import net.ltgt.gradle.errorprone.CheckSeverity
 
 buildscript {
+  ext.versions = [
+      'kotlin': '1.3.20',
+  ]
+
   dependencies {
     // TODO(jwilson): configure maven-publish-plugin to limit which artifacts are published.
     classpath 'com.vanniktech:gradle-maven-publish-plugin:0.8.0'
     classpath 'net.ltgt.gradle:gradle-errorprone-plugin:0.7.1'
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.20"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
     classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.9.18"
   }
 
