--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -241,7 +241,7 @@ workflows:
       - testconscrypt:
           filters:
             branches:
-              ignore: master
+              only: master
   nightly:
     triggers:
       - schedule:
