--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -119,7 +119,7 @@ jobs:
 
   testjdk11:
     docker:
-      - image: circleci/openjdk:11.0.2-jdk
+      - image: circleci/openjdk:11.0.3-jdk-stretch
 
     environment:
       JVM_OPTS: -Xmx1g
@@ -171,7 +171,7 @@ jobs:
 
   testconscrypt:
     docker:
-      - image: circleci/openjdk:11.0.2-jdk
+      - image: circleci/openjdk:11.0.3-jdk-stretch
 
     environment:
       JVM_OPTS: -Xmx1g
