--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -238,10 +238,11 @@ workflows:
           filters:
             branches:
               only: master
-      - testconscrypt:
-          filters:
-            branches:
-              only: master
+      - testconscrypt
+#      - testconscrypt:
+#          filters:
+#            branches:
+#              ignore: master
   nightly:
     triggers:
       - schedule:
